--- a/Project/YelpCamp/views/campgrounds/new.ejs
+++ b/Project/YelpCamp/views/campgrounds/new.ejs
@@ -12,15 +12,27 @@
         <div class="row">
             <h1 class="text-center">New Campground</h1>
             <div class="col-6 offset-3">
-                <form action="/campgrounds" method="POST">
+                <form action="/campgrounds" method="POST" novalidate class="needs-validation">
                     <div class="mb-3">
                         <label class="form-label" for="title">Title</label>
-                        <input class="form-control" type="text" id="title" name="campground[title]">
+                        <input class="form-control" type="text" id="title" name="campground[title]" required>
+                        <div class="valid-feedback">
+                            Looks good!
+                          </div>
+                        <div class="invalid-feedback">
+                            
+                        </div>
                     </div>
 
                     <div class="mb-3">
                         <label class="form-label" for="location">Location</label>
-                        <input class="form-control" type="text" id="location" name="campground[location]">
+                        <input class="form-control" type="text" id="location" name="campground[location]" required>
+                        <div class="valid-feedback">
+                            Looks good!
+                          </div>
+                        <div class="invalid-feedback">
+                            
+                        </div>
                     </div>
 
                     <div class="mb-3">
@@ -29,20 +41,32 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text" for="price">$</span>
                             </div>
-                            <input type="text" class="form-control" id="price" aria-label="Amount (to the nearest dollar)" placeholder="0.00" name="campground[price]">
+                            <input type="text" class="form-control" id="price" aria-label="Amount (to the nearest dollar)" placeholder="0.00" name="campground[price]" required>
+                            <div class="valid-feedback">
+                                Looks good!
+                              </div>
+                            <div class="invalid-feedback">
+                            
+                            </div>
                         </div>
                     </div>
                     
 
                     <div class="mb-3">
                         <label class="form-label" for="image">Image Url</label>
-                        <input class="form-control" type="text" id="image" name="campground[image]">
+                        <input class="form-control" type="text" id="image" name="campground[image]" required>
                     </div>
 
                     <div class="mb-3">
                         <label class="form-label" for=" description">Description</label>
                         <textarea class="form-control" type="text" id="description"
-                            name="campground[description]"></textarea>
+                            name="campground[description]" required ></textarea>
+                            <div class="valid-feedback">
+                                Looks good!
+                              </div>
+                            <div class="invalid-feedback">
+                            
+                        </div>
                     </div>
 
                     <div class="mb-3">
@@ -57,3 +81,6 @@
     </div>
     <!-- </body>
 </html> -->
+
+
+    
