--- a/Project/YelpCamp/views/error.ejs
+++ b/Project/YelpCamp/views/error.ejs
@@ -2,8 +2,9 @@
 <div class="row">
     <div class="col-6 offset-3">
         <div class="alert alert-danger" role="alert">
+            <h3><%=err.statusCode%></h3>
             <h4 class="alert-heading"><%=err.message%></h4>
-            <p><%= err.stack %></p>
+            <!-- <p><%= err.stack %></p> -->
         </div>
     </div>
 </div>
