--- a/Project/YelpCamp/views/campgrounds/show.ejs
+++ b/Project/YelpCamp/views/campgrounds/show.ejs
@@ -31,5 +31,42 @@
                 1 days ago
             </div>
         </div>
+        <h2>Leave a Review</h2>
+        <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3 needs-validation" novalidate>
+            <div class="mb-3">
+                <label class="form-label" for="rating">Rating</label>
+                <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating" oninput="this.nextElementSibling.value = this.value" required>
+                <output>3</output>
+                
+                <!-- <p>
+                <input class="form-check-input" type="radio" name="rating" id="1" value="1">
+                    <label for="1">1 </label>
+                    <input class="form-check-input" type="radio" name="rating" id="2" value="2">
+                    <label for="2">2 </label>
+                    <input class="form-check-input" type="radio" name="rating" id="3" value="3">
+                    <label for="3">3 </label>
+                    <input class="form-check-input" type="radio" name="rating" id="4" value="4">
+                    <label for="3">4 </label>
+                    <input class="form-check-input" type="radio" name="rating" id="5" value="5">
+                    <label for="3">5 </label>
+                    <button class="btn btn-light">submit</button>
+                </p> -->
+
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="body">Review</label>
+                <textarea class="form-control" name="review[body]" id="body" cols="30" rows="2" required></textarea>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+            <button class="btn btn-success">Sumbit</button>
+        </form>
+        <% for(let review of campground.reviews) { %> 
+        <div class="mb-3">
+            <p>Rating <%= review.rating %> </p>
+            <p>Review: <%= review.body %> </p>
+        </div>
+        <% } %> 
     </div>
 </div>
