flash and session

--- a/Project/YelpCamp/views/campgrounds/show.ejs
+++ b/Project/YelpCamp/views/campgrounds/show.ejs
@@ -1,6 +1,7 @@
 <% layout('layouts/boilerplate') %>
     <div class="row">
-        <div class="col-6 offset-md-1">
+        <!-- offset-md-1 -->
+        <div class="col-6">
             <div class="card mb-3">
                 <img src="<%= campground.image%>" class="card-img-top h-50" alt="Campground Image">
                 <div class="card-body">
@@ -17,6 +18,7 @@
                     </li>
                     <li class="list-group-item">$<%= campground.price%>/night</li>
                 </ul>
+
                 <div class="card-body">
                     <a class="card-link btn btn-primary" href="/campgrounds/<%=campground._id%>/edit">Edit</a>
                     <form class="d-inline" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
@@ -28,7 +30,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-4">
+        <div class="col-6">
             <h2>Leave a Review</h2>
             <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3 needs-validation"
                 novalidate>
