--- a/Project/YelpCamp/views/campgrounds/index.ejs
+++ b/Project/YelpCamp/views/campgrounds/index.ejs
@@ -7,32 +7,39 @@
     <title>Campgrounds</title>
 </head> -->
 <!-- <body> -->
-<% layout('layouts/boilerplate') %> 
-<h1>All campgrounds</h1>
-<div>
-    <a href="/campgrounds/new">Add Campground</a>
-</div>
-<ul>
-    <% for (let campground of campgrounds) {%> 
+<% layout('layouts/boilerplate') %>
+    <h1>All campgrounds</h1>
+    <div>
+        <a href="/campgrounds/new">Add Campground</a>
+    </div>
+    <!-- <ul> -->
+    <% for (let campground of campgrounds) {%>
         <!-- <li><a href="/campgrounds/<%= campground._id %>"><%= campground.title %></a></li> -->
-        <div class="card" mb-3>
+        <div class="card col-lg-10">
             <div class="row">
                 <div class="col-md-4">
                     <img class="img-fluid" alt="" src="<%= campground.image %>">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
-                        <h5 class="card-title"> <%= campground.title %> </h5>
-                        <p class="card-text"> <%= campground.description %> </p>
+                        <h5 class="card-title">
+                            <%= campground.title %>
+                        </h5>
                         <p class="card-text">
-                            <small class="text-muted"> <%= campground.location %> </small>
+                            <%= campground.description %>
+                        </p>
+                        <p class="card-text">
+                            <small class="text-muted">
+                                <%= campground.location %>
+                            </small>
                         </p>
                         <a href="/campgrounds/<%=campground._id%>" class="card-link">View Campground</a>
                     </div>
                 </div>
             </div>
         </div>
-    <% } %> 
-</ul>
-<!-- </body>
+        <% } %>
+            <!-- </ul> -->
+            <!-- </body>
 </html> -->
+
