--- a/Project/YelpCamp/views/error.ejs
+++ b/Project/YelpCamp/views/error.ejs
@@ -1,3 +1,4 @@
+<!-- views, the directory where the template files are located -->
 <% layout('layouts/boilerplate')%>
 <div class="row">
     <div class="col-6 offset-3">
