--- a/Project/YelpCamp/views/campgrounds/show.ejs
+++ b/Project/YelpCamp/views/campgrounds/show.ejs
@@ -16,21 +16,27 @@
                     <li class="list-group-item text-muted">
                         <%= campground.location%>
                     </li>
+                    <li class="list-group-item">
+                        Submitted by <%= campground.author.username%>
+                    </li>
                     <li class="list-group-item">$<%= campground.price%>/night</li>
                 </ul>
-
+                <!-- if currentUser exists(signed in) -->
+                <% if(currentUser && campground.author.equals(currentUser._id)) {%> 
                 <div class="card-body">
                     <a class="card-link btn btn-primary" href="/campgrounds/<%=campground._id%>/edit">Edit</a>
                     <form class="d-inline" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
                         <button class="btn btn-danger">Delete</button>
                     </form>
                 </div>
+                <% } %> 
                 <div class="card-footer text-muted">
                     1 days ago
                 </div>
             </div>
         </div>
         <div class="col-6">
+            <% if(currentUser) { %> 
             <h2>Leave a Review</h2>
             <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3 needs-validation"
                 novalidate>
@@ -50,6 +56,7 @@
                 </div>
                 <button class="btn btn-success">Sumbit</button>
             </form>
+            <% } %> 
             <div class="card mb-3">
                 <div class="card-header">
                     Reviews
@@ -67,12 +74,15 @@
                     <li class="list-group-item">
                         <p>Rating <%= review.rating %>
                         </p>
+                        <h6 class="card-subtitle mb-2 text-muted">By <%= review.author.username %> </h6>
                         <p><%= review.body %>
                         </p>
                         <!-- Delete Review -->
+                        <% if(currentUser && review.author.equals(currentUser._id)) {%>
                         <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
                             <button class="btn btn-sm btn-danger">Delete</button>
                         </form>
+                        <% } %>
                     </li>
                 <% } %>
                 </ul>
