--- a/Project/YelpCamp/views/campgrounds/show.ejs
+++ b/Project/YelpCamp/views/campgrounds/show.ejs
@@ -1,4 +1,5 @@
 <% layout('layouts/boilerplate') %>
+    <link rel="stylesheet" href="/stylesheets/stars.css">
     <div class="row">
         <!-- offset-md-1 -->
         <div class="col-6">
@@ -22,70 +23,93 @@
                     <li class="list-group-item">$<%= campground.price%>/night</li>
                 </ul>
                 <!-- if currentUser exists(signed in) -->
-                <% if(currentUser && campground.author.equals(currentUser._id)) {%> 
-                <div class="card-body">
-                    <a class="card-link btn btn-primary" href="/campgrounds/<%=campground._id%>/edit">Edit</a>
-                    <form class="d-inline" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
-                        <button class="btn btn-danger">Delete</button>
-                    </form>
-                </div>
-                <% } %> 
-                <div class="card-footer text-muted">
-                    1 days ago
-                </div>
+                <% if(currentUser && campground.author.equals(currentUser._id)) {%>
+                    <div class="card-body">
+                        <a class="card-link btn btn-primary" href="/campgrounds/<%=campground._id%>/edit">Edit</a>
+                        <form class="d-inline" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
+                            <button class="btn btn-danger">Delete</button>
+                        </form>
+                    </div>
+                    <% } %>
+                        <div class="card-footer text-muted">
+                            1 days ago
+                        </div>
             </div>
         </div>
         <div class="col-6">
-            <% if(currentUser) { %> 
-            <h2>Leave a Review</h2>
-            <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3 needs-validation"
-                novalidate>
-                <div class="mb-3">
+            <% if(currentUser) { %>
+                <h2>Leave a Review</h2>
+                <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3 needs-validation"
+                    novalidate>
+                    <!-- <div class="mb-3">
                     <label class="form-label" for="rating">Rating</label>
                     <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating"
                         oninput="this.nextElementSibling.value = this.value" required>
                     <output>3</output>
-
-                </div>
-                <div class="mb-3">
-                    <label class="form-label" for="body">Review</label>
-                    <textarea class="form-control" name="review[body]" id="body" cols="30" rows="2" required></textarea>
-                    <div class="valid-feedback">
-                        Looks good!
+                </div> -->
+                    <div class="mb-3">
+                        <fieldset class="starability-basic">
+                            <!-- <legend>First rating:</legend> -->
+                            <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1"
+                                checked aria-label="No rating." />
+                            <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                            <label for="first-rate1" title="Terrible">1 star</label>
+                            <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                            <label for="first-rate2" title="Not good">2 stars</label>
+                            <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                            <label for="first-rate3" title="Average">3 stars</label>
+                            <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                            <label for="first-rate4" title="Very good">4 stars</label>
+                            <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                            <label for="first-rate5" title="Amazing">5 stars</label>
+                        </fieldset>
                     </div>
-                </div>
-                <button class="btn btn-success">Sumbit</button>
-            </form>
-            <% } %> 
-            <div class="card mb-3">
-                <div class="card-header">
-                    Reviews
-                </div>
-                <ul class="list-group list-group-flush">
-                <!-- If no review -->
-                <% if (campground.reviews.length == 0) { %>
-                    <li class="list-group-item">
-                        <p> No Reviews</p>
-                    </li>
+                    <div class="mb-3">
+                        <label class="form-label" for="body">Review</label>
+                        <textarea class="form-control" name="review[body]" id="body" cols="30" rows="2"
+                            required></textarea>
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                    </div>
+                    <button class="btn btn-success">Sumbit</button>
+                </form>
                 <% } %>
-                <!-- list reviews -->
-                <% for(let review of campground.reviews) { %>
-                    <!-- <div class="card-body"> -->
-                    <li class="list-group-item">
-                        <p>Rating <%= review.rating %>
-                        </p>
-                        <h6 class="card-subtitle mb-2 text-muted">By <%= review.author.username %> </h6>
-                        <p><%= review.body %>
-                        </p>
-                        <!-- Delete Review -->
-                        <% if(currentUser && review.author.equals(currentUser._id)) {%>
-                        <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
-                            <button class="btn btn-sm btn-danger">Delete</button>
-                        </form>
-                        <% } %>
-                    </li>
-                <% } %>
-                </ul>
-            </div>
+                    <div class="card mb-3">
+                        <div class="card-header">
+                            Reviews
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <!-- If no review -->
+                            <% if (campground.reviews.length==0) { %>
+                                <li class="list-group-item">
+                                    <p> No Reviews</p>
+                                </li>
+                                <% } %>
+                                    <!-- list reviews -->
+                                    <% for(let review of campground.reviews) { %>
+                                        <!-- <div class="card-body"> -->
+                                        <li class="list-group-item">
+                                            <!-- Stars -->
+                                            <h6 class="card-title mb-2 text-muted">By <%= review.author.username %>
+                                            </h6>
+                                            <p class="starability-result" data-rating="<%= review.rating %>">Rated: <%=
+                                                    review.rating %> Stars</p>
+
+                                            <p>
+                                                <%= review.body %>
+                                            </p>
+                                            <!-- Delete Review -->
+                                            <% if(currentUser && review.author.equals(currentUser._id)) {%>
+                                                <form
+                                                    action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE"
+                                                    method="POST">
+                                                    <button class="btn btn-sm btn-danger">Delete</button>
+                                                </form>
+                                                <% } %>
+                                        </li>
+                                        <% } %>
+                        </ul>
+                    </div>
         </div>
     </div>
