--- a/YelpCamp/views/partials/navbar.ejs
+++ b/YelpCamp/views/partials/navbar.ejs
@@ -11,6 +11,15 @@
                 <a class="nav-link" href="/campgrounds">Campgrounds</a>
                 <a class="nav-link" href="/campgrounds/new">New Campgound</a>
             </div>
+            <div class="navbar-nav ms-auto">
+                // only after login
+                <% if(!currentUser) {%> 
+                <a class="nav-link" href="/login">Login</a>
+                <a class="nav-link" href="/register">Register</a>
+                <% } else { %> 
+                <a class="nav-link" href="/logout">Logout</a>
+                <% } %> 
+            </div>
         </div>
     </div>
 </nav>
