--- a/YelpCamp/views/campgrounds/new.ejs
+++ b/YelpCamp/views/campgrounds/new.ejs
@@ -12,7 +12,9 @@
         <div class="row">
             <h1 class="text-center">New Campground</h1>
             <div class="col-6 offset-3">
-                <form action="/campgrounds" method="POST" novalidate class="needs-validation">
+                <!-- The enctype attribute specifies how the form-data should be encoded when submitting it to the server.
+                      multipart/form-data is necessary if the user will upload a file through the form-->
+                <form action="/campgrounds" method="POST" novalidate class="needs-validation" enctype="multipart/form-data">
                     <div class="mb-3">
                         <label class="form-label" for="title">Title</label>
                         <input class="form-control" type="text" id="title" name="campground[title]" required>
@@ -51,11 +53,13 @@
                         </div>
                     </div>
                     
-
-                    <div class="mb-3">
+                    <!-- <div class="mb-3">
                         <label class="form-label" for="image">Image Url</label>
                         <input class="form-control" type="text" id="image" name="campground[image]" required>
-                    </div>
+                    </div> -->
+                    
+                    <!-- User upload an image, the image store on the cloud -->
+                    <input type="file" name="image" id="">
 
                     <div class="mb-3">
                         <label class="form-label" for=" description">Description</label>
