--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -1,12 +1,33 @@
 <% layout('layouts/boilerplate') %>
-    <link rel="stylesheet" href="/stylesheets/stars.css">
+    <link rel="stylesheet" href="/stylesheets/stars.css" />
     <div class="row">
-        <!-- offset-md-1 -->
         <div class="col-6">
+            <!-- Photo carousel -->
+            <div id="campgroundCarousel" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <% campground.images.forEach((img, i)=> { %>
+                        <div class="carousel-item <%= i === 0 ? 'active' : ''%>">
+                            <img src="<%= img.url%>" class="d-block w-100" alt="">
+                        </div>
+                        <% }) %>
+
+                </div>
+                <% if(campground.images.length> 1) {%>
+                    <a class="carousel-control-prev" href="#campgroundCarousel" role="button" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#campgroundCarousel" role="button" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                    <% } %>
+            </div>
+
             <div class="card mb-3">
-                <% for(let img of campground.images) { %>
-                    <img src="<%= img.url %>" class="card-img-top h-50" alt="Campground Image">
-                <% } %>
+                <!-- <% campground.images.forEach((img, i)=>{ %>
+                    <img src="<%= img.url %>" class="card-img-top h-50" alt="Campground Image" />
+                    <% }) %> -->
                 <div class="card-body">
                     <h5 class="card-title">
                         <%= campground.title%>
@@ -34,9 +55,7 @@
                         </form>
                     </div>
                     <% } %>
-                        <div class="card-footer text-muted">
-                            1 days ago
-                        </div>
+                        <div class="card-footer text-muted">1 days ago</div>
             </div>
         </div>
         <div class="col-6">
@@ -71,22 +90,18 @@
                         <label class="form-label" for="body">Review</label>
                         <textarea class="form-control" name="review[body]" id="body" cols="30" rows="2"
                             required></textarea>
-                        <div class="valid-feedback">
-                            Looks good!
-                        </div>
+                        <div class="valid-feedback">Looks good!</div>
                     </div>
                     <button class="btn btn-success">Sumbit</button>
                 </form>
                 <% } %>
                     <div class="card mb-3">
-                        <div class="card-header">
-                            Reviews
-                        </div>
+                        <div class="card-header">Reviews</div>
                         <ul class="list-group list-group-flush">
                             <!-- If no review -->
                             <% if (campground.reviews.length==0) { %>
                                 <li class="list-group-item">
-                                    <p> No Reviews</p>
+                                    <p>No Reviews</p>
                                 </li>
                                 <% } %>
                                     <!-- list reviews -->
@@ -94,10 +109,12 @@
                                         <!-- <div class="card-body"> -->
                                         <li class="list-group-item">
                                             <!-- Stars -->
-                                            <h6 class="card-title mb-2 text-muted">By <%= review.author.username %>
+                                            <h6 class="card-title mb-2 text-muted">
+                                                By <%= review.author.username %>
                                             </h6>
-                                            <p class="starability-result" data-rating="<%= review.rating %>">Rated: <%=
-                                                    review.rating %> Stars</p>
+                                            <p class="starability-result" data-rating="<%= review.rating %>">
+                                                Rated: <%= review.rating %> Stars
+                                            </p>
 
                                             <p>
                                                 <%= review.body %>
