--- a/YelpCamp/views/campgrounds/index.ejs
+++ b/YelpCamp/views/campgrounds/index.ejs
@@ -18,7 +18,8 @@
         <div class="card col-lg-10">
             <div class="row">
                 <div class="col-md-4">
-                    <img class="img-fluid" alt="" src="<%= campground.image %>">
+                    <!-- show the first image in home page -->
+                    <img class="img-fluid" alt="" src="<%= campground.images[0].url %>">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -42,4 +43,3 @@
             <!-- </ul> -->
             <!-- </body>
 </html> -->
-
