--- a/YelpCamp/views/campgrounds/new.ejs
+++ b/YelpCamp/views/campgrounds/new.ejs
@@ -1,12 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Campground</title>
-</head>
-<body> -->
 <% layout('layouts/boilerplate') %>
     <div class="container">
         <div class="row">
@@ -14,15 +5,16 @@
             <div class="col-6 offset-3">
                 <!-- The enctype attribute specifies how the form-data should be encoded when submitting it to the server.
                       multipart/form-data is necessary if the user will upload a file through the form-->
-                <form action="/campgrounds" method="POST" novalidate class="needs-validation" enctype="multipart/form-data">
+                <form action="/campgrounds" method="POST" novalidate class="needs-validation"
+                    enctype="multipart/form-data">
                     <div class="mb-3">
                         <label class="form-label" for="title">Title</label>
                         <input class="form-control" type="text" id="title" name="campground[title]" required>
                         <div class="valid-feedback">
                             Looks good!
-                          </div>
+                        </div>
                         <div class="invalid-feedback">
-                            
+
                         </div>
                     </div>
 
@@ -31,9 +23,9 @@
                         <input class="form-control" type="text" id="location" name="campground[location]" required>
                         <div class="valid-feedback">
                             Looks good!
-                          </div>
+                        </div>
                         <div class="invalid-feedback">
-                            
+
                         </div>
                     </div>
 
@@ -43,16 +35,18 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text" for="price">$</span>
                             </div>
-                            <input type="text" class="form-control" id="price" aria-label="Amount (to the nearest dollar)" placeholder="0.00" name="campground[price]" required>
+                            <input type="text" class="form-control" id="price"
+                                aria-label="Amount (to the nearest dollar)" placeholder="0.00" name="campground[price]"
+                                required>
                             <div class="valid-feedback">
                                 Looks good!
-                              </div>
+                            </div>
                             <div class="invalid-feedback">
-                            
+
                             </div>
                         </div>
                     </div>
-                    
+
                     <!-- User upload multiple images, the images are stored on the cloud -->
                     <div class="mb-3">
                         <div class="form-file custom-file">
@@ -66,13 +60,13 @@
 
                     <div class="mb-3">
                         <label class="form-label" for=" description">Description</label>
-                        <textarea class="form-control" type="text" id="description"
-                            name="campground[description]" required ></textarea>
-                            <div class="valid-feedback">
-                                Looks good!
-                              </div>
-                            <div class="invalid-feedback">
-                            
+                        <textarea class="form-control" type="text" id="description" name="campground[description]"
+                            required></textarea>
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                        <div class="invalid-feedback">
+
                         </div>
                     </div>
 
@@ -88,6 +82,3 @@
     </div>
     <!-- </body>
 </html> -->
-
-
-    
