--- a/YelpCamp/views/campgrounds/edit.ejs
+++ b/YelpCamp/views/campgrounds/edit.ejs
@@ -38,10 +38,9 @@
                         </div>
                     </div>
 
-
                     <div class="mb-3">
-                        <label class="form-label" for="image">Add Images</label>
-                        <input type="file" name="image" id="image" multiple>
+                        <label for="image" class="form-label">Add more image(s)</label>
+                        <input class="form-control" type="file" id="image" name="image" multiple>
                     </div>
 
                     <div class="mb-3">
