--- a/YelpCamp/views/campgrounds/new.ejs
+++ b/YelpCamp/views/campgrounds/new.ejs
@@ -49,13 +49,8 @@
 
                     <!-- User upload multiple images, the images are stored on the cloud -->
                     <div class="mb-3">
-                        <div class="form-file custom-file">
-                            <input type="file" class="form-file-input" id="image" name="image" multiple>
-                            <label class="form-file-label" for="image">
-                                <span class="form-file-text custom-file-label">Choose image(s)...</span>
-                                <span class="form-file-button">Browse</span>
-                            </label>
-                        </div>
+                        <label for="image" class="form-label">Choose image(s)</label>
+                        <input class="form-control" type="file" id="image" name="image" multiple>
                     </div>
 
                     <div class="mb-3">
