--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -1,7 +1,14 @@
 <% layout('layouts/boilerplate') %>
     <link rel="stylesheet" href="/stylesheets/stars.css" />
+
+    <script>
+        const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+    </script>
+
     <div class="row">
         <div class="col-6">
+            <!-- Map -->
+            <div id='map' style='width: 400px; height: 300px;'></div>
             <!-- Photo carousel -->
             <div id="campgroundCarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
@@ -133,3 +140,5 @@
                     </div>
         </div>
     </div>
+    <!-- ??? -->
+    <script src="/javascripts/showPageMap.js"></script>
