--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -1,14 +1,10 @@
 <% layout('layouts/boilerplate') %>
     <link rel="stylesheet" href="/stylesheets/stars.css" />
 
-    <script>
-        const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
-    </script>
-
     <div class="row">
         <div class="col-6">
             <!-- Map -->
-            <div id='map' style='width: 400px; height: 300px;'></div>
+            <div id="map" style="width: 400px; height: 300px;"></div>
             <!-- Photo carousel -->
             <div id="campgroundCarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
@@ -17,7 +13,6 @@
                             <img src="<%= img.url%>" class="d-block w-100" alt="">
                         </div>
                         <% }) %>
-
                 </div>
                 <% if(campground.images.length> 1) {%>
                     <a class="carousel-control-prev" href="#campgroundCarousel" role="button" data-bs-slide="prev">
@@ -140,5 +135,9 @@
                     </div>
         </div>
     </div>
-    <!-- ??? -->
+
+    <script>
+        const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+        const campground = <%-JSON.stringify(campground)%>;
+    </script>
     <script src="/javascripts/showPageMap.js"></script>
