--- a/YelpCamp/views/campgrounds/index.ejs
+++ b/YelpCamp/views/campgrounds/index.ejs
@@ -1,4 +1,6 @@
 <% layout('layouts/boilerplate') %>
+    <div id="map" class="map" style="width: 100%; height: 400px"></div>
+
     <h1>All campgrounds</h1>
     <div>
         <a href="/campgrounds/new">Add Campground</a>
@@ -6,7 +8,7 @@
     <!-- <ul> -->
     <% for (let campground of campgrounds) {%>
         <!-- <li><a href="/campgrounds/<%= campground._id %>"><%= campground.title %></a></li> -->
-        <div class="card col-lg-10">
+        <div class="card mb-2">
             <div class="row">
                 <div class="col-md-4">
                     <!-- show the first image in home page -->
@@ -36,6 +38,8 @@
             </div>
         </div>
         <% } %>
-            <!-- </ul> -->
-            <!-- </body>
-</html> -->
+
+        <script>
+            const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+        </script>
+        <script src="/javascripts/clusterMap.js"></script>
