--- a/YelpCamp/views/campgrounds/index.ejs
+++ b/YelpCamp/views/campgrounds/index.ejs
@@ -24,6 +24,9 @@
                         <h5 class="card-title">
                             <%= campground.title %>
                         </h5>
+                        <!-- <h5 class="card-title">
+                            <%= campground.properties.popUpMarkup %> -->
+                        </h5>
                         <p class="card-text">
                             <%= campground.description %>
                         </p>
@@ -39,8 +42,8 @@
         </div>
         <% } %>
 
-        <script>
-            const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
-            const campgrounds = {features: <%- JSON.stringify(campgrounds) %>}
-        </script>
-        <script src="/javascripts/clusterMap.js"></script>
+            <script>
+                const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+                const campgrounds = { features: <%- JSON.stringify(campgrounds) %>}
+            </script>
+            <script src="/javascripts/clusterMap.js"></script>
