--- a/YelpCamp/views/partials/footer.ejs
+++ b/YelpCamp/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="footer py-1 mt-auto" style="background-color: #F5F5F7;">
     <div class="container">
-        <span class="text-muted">&copy; Zehua Wei 2022</span>
+        <span class="text-muted">&copy; Zehua 2022</span>
     </div>
 </footer>
 
