--- a/YelpCamp/views/users/login.ejs
+++ b/YelpCamp/views/users/login.ejs
@@ -24,5 +24,5 @@
         </div>
     </div>
 
-    <button class="btn btn-success">Register</button>
+    <button class="btn btn-success">Login</button>
 </form>
