--- a/YelpCamp/views/campgrounds/edit.ejs
+++ b/YelpCamp/views/campgrounds/edit.ejs
@@ -61,7 +61,10 @@
                                 <input type="checkbox" id="image-<%=i%>" name="deleteImages[]"
                                     value="<%=img.filename%>">
                             </div>
-                            <label for="image-<%=i%>">Delete?</label>
+                            <label for="image-<%=i%>">Delete</label>
+                            
+                            
+                            
                             <% })%>
                     </div>
 
