--- a/YelpCamp/views/campgrounds/index.ejs
+++ b/YelpCamp/views/campgrounds/index.ejs
@@ -1,49 +1,47 @@
 <% layout('layouts/boilerplate') %>
-    <div id="map" class="map" style="width: 100%; height: 400px"></div>
+    <div id="cluster-map"></div>
+    <div class="container">
 
-    <h1>All campgrounds</h1>
-    <div>
-        <a href="/campgrounds/new">Add Campground</a>
-    </div>
-    <!-- <ul> -->
-    <% for (let campground of campgrounds) {%>
-        <!-- <li><a href="/campgrounds/<%= campground._id %>"><%= campground.title %></a></li> -->
-        <div class="card mb-2">
-            <div class="row">
-                <div class="col-md-4">
-                    <!-- show the first image in home page -->
-                    <% if(campground.images.length) {%>
-                        <img class="img-fluid" alt="" src="<%= campground.images[0].url %>">
-                        <% } else {%>
-                            <img class="img-fluid" alt=""
-                                src="https://res.cloudinary.com/stuof3l/image/upload/v1657323354/YelpCamp/amufllaeerrwjmuxmvar.jpg">
-                            <% } %>
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">
-                            <%= campground.title %>
-                        </h5>
-                        <!-- <h5 class="card-title">
+        <h1>All campgrounds</h1>
+
+        <% for (let campground of campgrounds) {%>
+            <!-- <li><a href="/campgrounds/<%= campground._id %>"><%= campground.title %></a></li> -->
+            <div class="card mb-3">
+                <div class="row">
+                    <div class="col-md-4">
+                        <!-- show the first image in home page -->
+                        <% if(campground.images.length) {%>
+                            <img class="img-fluid" alt="" src="<%= campground.images[0].url %>">
+                            <% } else {%>
+                                <img class="img-fluid" alt=""
+                                    src="https://res.cloudinary.com/stuof3l/image/upload/v1657323354/YelpCamp/amufllaeerrwjmuxmvar.jpg">
+                                <% } %>
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <%= campground.title %>
+                            </h5>
+                            <!-- <h5 class="card-title">
                             <%= campground.properties.popUpMarkup %> -->
-                        </h5>
-                        <p class="card-text">
-                            <%= campground.description %>
-                        </p>
-                        <p class="card-text">
-                            <small class="text-muted">
-                                <%= campground.location %>
-                            </small>
-                        </p>
-                        <a href="/campgrounds/<%=campground._id%>" class="card-link">View Campground</a>
+                            </h5>
+                            <p class="card-text">
+                                <%= campground.description %>
+                            </p>
+                            <p class="card-text">
+                                <small class="text-muted">
+                                    <%= campground.location %>
+                                </small>
+                            </p>
+                            <a href="/campgrounds/<%=campground._id%>" class="card-link">View Campground</a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <% } %>
-
-            <script>
-                const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
-                const campgrounds = { features: <%- JSON.stringify(campgrounds) %>}
-            </script>
-            <script src="/javascripts/clusterMap.js"></script>
+            <% } %>
+    </div>
+    <script>
+        const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+        const campgrounds = {features: <%- JSON.stringify(campgrounds) %>}
+    </script>
+    <script src="/javascripts/clusterMap.js"></script>
