--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -1,10 +1,7 @@
 <% layout('layouts/boilerplate') %>
     <link rel="stylesheet" href="/stylesheets/stars.css" />
-
     <div class="row">
         <div class="col-6">
-            <!-- Map -->
-            <div id="map" style="width: 400px; height: 300px;"></div>
             <!-- Photo carousel -->
             <div id="campgroundCarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
@@ -61,6 +58,7 @@
             </div>
         </div>
         <div class="col-6">
+            <div id="map" class="mb-1"></div>
             <% if(currentUser) { %>
                 <h2>Leave a Review</h2>
                 <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3 needs-validation"
